# quartermaster

./: .gitignore  CLAUDE.md  Dockerfile  FRIENDLY_ROBOTS_ASSISTANT.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: settings.example.yaml
docs/superpowers/plans/: 2026-03-24-quartermaster-phase1-mvp.md  2026-03-25-quartermaster-phase2-mcp-infrastructure.md  2026-03-26-quartermaster-phase3a-gmail-integration.md  2026-03-27-quartermaster-phase3b-outlook-integration.md
docs/superpowers/specs/: 2026-03-24-quartermaster-architecture-design.md  (+3 more)
plugins/briefing/: plugin.py  templates.py
plugins/chat/: plugin.py  prompts.py
plugins/commands/: plugin.py
plugins/email/: plugin.py
scripts/: gmail_oauth_setup.py  outlook_oauth_setup.py  setup_oracle_pdb.sql  setup_test_pdb.sql
src/quartermaster/: __init__.py  __main__.py
tests/: conftest.py
tests/conversation/: test_manager.py
tests/core/: test_approval.py  test_config.py  test_database.py  test_email_config.py  test_events.py  test_scheduler.py  test_tools.py  test_usage.py
tests/email/: test_gmail.py  test_models.py  test_outlook.py
tests/fixtures/: echo_server.py
tests/llm/: test_anthropic_client.py  test_local.py  test_router.py
tests/mcp/: conftest.py  test_auth.py  test_bridge.py  test_client.py  test_config.py  test_integration.py  test_server.py  test_transports.py
tests/plugin/: test_loader.py
tests/plugins/: test_briefing.py  test_chat.py  test_chat_truncation.py  test_commands.py  test_email_plugin.py
tests/transport/: test_types.py
(+34 files in other folders)
